# users-API

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  config.py  docker-compose.test.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: linters_check.yml  test_check.yml  test_coverage.yml
migrations/: env.py
migrations/versions/: 293bc77c59b2_initial.py  9cc828643ba5_initial.py  9da0b312301d_initial.py  9dad237f1adc_initial.py
tests/: conftest.py  test_admin.py  test_auth.py  test_user.py
tests/fixtures/: users.py
users_app/: main.py
users_app/api/v1/routers/: admin.py  auth.py  constants.py  private.py  user.py
users_app/cache/: abstract_cache.py  module.py  settings.py
users_app/database/: models.py  settings.py
users_app/database/crud/: abstract_crud.py  cities.py  users.py
users_app/exceptions/: constants.py  handlers.py
users_app/middleware/: auth.py
users_app/schemas/: schemas.py
users_app/security/: cifer.py  hasher.py
users_app/services/: auth.py  helper.py  users.py
users_app/validation/: schemas.py
