[tool.poetry]
name = "users-api"
version = "0.1.0"
description = ""
authors = ["Sergey Kim <<sergkim7@gmail.com>>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"
asyncpg = "^0.27.0"
pre-commit = "^3.2.2"
alembic = "^1.10.4"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.11"
itsdangerous = "^2.1.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
